# machine-learning-projects

./: pyproject.toml  requirements.txt
credit-scoring-attempt-1/: EDA.ipynb  hobbies.json  pipeline.ipynb
credit-scoring-attempt-1/pickles/: grid_1.pkl  grid_2.pkl  param_grid_1.pkl  param_grid_2.pkl  study_1.pkl  study_2.pkl
